--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,6 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+//element ui import start 
+@import '~element-ui/lib/theme-chalk/index.css';
+// element ui import end
